resolved page gap issue, page transitions and added stellar.js

--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ a:hover {
     min-height: 100%;
     height: 100%;
     overflow: hidden;
-    border-bottom: 1px solid #ccc;
+    box-shadow: 0px 5px 7px #000;
 }
 /*  css for loader transition  */
 .os-phrases h3 {
@@ -1298,6 +1298,7 @@ margin-left: 42%;
     min-height: 100%;
     height: 100%;
     overflow: hidden;
+    display: none;
 }
 .contact{
     font-size: 1.4vw;
